--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "About me - Muhamed Kouate"
 title_separator          : "-"
 name                     : &name "Muhamed Kouate"
 description              : &description "personal description"
-url                      : https://muhamedkouate.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kouatemuhamed.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "muhamedkouate/muhamedkouate.github.io"
+repository               : "KouateMuhamed/KouateMuhamed.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
