--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/kouatemuhamed/"
+  linkedin         : "linkedin.com/in/kouatemuhamed/"
   orcid            :
   pinterest        :
   soundcloud       :
@@ -244,6 +244,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _Certificates
+  - scope:
+      path: ""
+      type: certificate
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
 
 # Sass/SCSS
 sass:
