--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "it-IT"
 title                    : "Muhamed Kouate"
 title_separator          : "-"
 name                     : &name "Muhamed Kouate"
-description              : &description "AI Engineer & Research Assistant"
+description              : &description "Visiting Student Researcher at Stanford University"
 url                      : https://kouatemuhamed.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "KouateMuhamed/kouatemuhamed.github.io"
