--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Muhamed Kouate"
   avatar           : "profile.jpg"
-  bio              : "AI Engineer & Research Assistant in Computer Vision at @UNIUD"
+  bio              : "Visiting Student Researcher at @Stanford University"
   location         : "Italy"
   employer         :
   pubmed           :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "linkedin.com/in/kouatemuhamed/"
+  linkedin         : "kouatemuhamed/"
   orcid            :
   pinterest        :
   soundcloud       :
