--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,10 @@ main:
     url: /cv/
   - title: "Certificates"
     url: /certificates/
+  - title: "Certificates"
+    url: https://github.com/KouateMuhamed
+  - title: "Medium"
+    url: https://medium.com/@contact.kouatemuhamed
 
 
   # - title: "Guide"
