--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     url: /cv/
   - title: "Certificates"
     url: /certificates/
-  - title: "Certificates"
+  - title: "Code"
     url: https://github.com/KouateMuhamed
   - title: "Medium"
     url: https://medium.com/@contact.kouatemuhamed
