--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   - title: "Code"
     url: https://github.com/KouateMuhamed
   - title: "Medium"
-    url: https://medium.com/@contact.kouatemuhamed
+    url: https://medium.com/@kouatemuhamed
   - title: "Certificates"
     url: /certificates/
 
